material parameters in classes tetra and facette

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,8 +64,7 @@ set( CMAKE_CXX_FLAGS_RELEASE "-DORD2 -DNDEBUG -DNSTAT -Wall -Wextra -std=c++11 -
 SET( SOURCES config.h pt3D.h tetra.h tetra.cpp facette.h facette.cpp feellgoodSettings.h node.h
 	linear_algebra.h main.cc cputime.cc dialog.cc affichage.cc
 	saveH.cc lecture.cc femutil.cc chapeaux.cc restoresol.cc direction.cc
-	recentrage.cc energy.cc saver.cc savesol.cc savecfg_vtk.cc
-	vsolve.cc tiny.h)
+	recentrage.cc energy.cc saver.cc savesol.cc savecfg_vtk.cc vsolve.cc tiny.h)
 
 SET( HEADERS ${ANN_INCLUDE_DIR}/ANN.h ${GMM_INCLUDE_DIR}/gmm.h ${SCALFMM_INCLUDE_DIR}/Kernels/Rotation/FRotationKernel.hpp)
 
