more settings.json

--- a/settings.json
+++ b/settings.json
@@ -7,13 +7,25 @@
 "save_energies" : 3,
 "take_photo" : 5,
 "restore" : false,
-"Ms" : 3.14159,
-"matrix" : [[1,2,3],[4,5,6],[7,8,9]],
 "field_sequence" :
+	[
+	[0.0,1.0,0.2,1.0,0.0,0.0],
+	[1.0,-1.0,0.2,1.0,0.0,0.0],
+	[-1.0,0.0,0.2,1.0,0.0,0.0]	
+	],
+"volume_regions" :
 	{
-	"one" : [0.0,1.0,0.2,1.0,0.0,0.0],
-	"two" : [1.0,-1.0,0.2,1.0,0.0,0.0],
-	"schtroumph" : [-1.0,0.0,0.2,1.0,0.0,0.0]	
+	"300" : 
+		{
+		"Ae" : 1e-11,
+		"Js" : 1.0,
+		"Ka" : 0.0,
+		"a" : [0.0,0.0,1.0],		
+		"alpha" : 0.05		
+		}
 	},
-"magic_number" : 42
+"surface_regions" :
+	{
+	"200" : {"Js" : -1}	
+	}
 }
