more settings.json

--- a/settings.json
+++ b/settings.json
@@ -22,6 +22,14 @@
 		"Ka" : 0.0,
 		"a" : [0.0,0.0,1.0],		
 		"alpha" : 0.05		
+		},
+	"301" : 
+		{
+		"Ae" : 1e-11,
+		"Js" : 1.0,
+		"Ka" : -1.0,
+		"a" : [0.0,0.0,1.0],		
+		"alpha" : 0.05		
 		}
 	},
 "surface_regions" :
