--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 PROJECT (FEELLGOOD)
 cmake_minimum_required(VERSION 2.8)
+cmake_policy(SET CMP0015 OLD)
 
 #===========================================================================
 # FEELLGOOD version number.
