--- a/settings.json
+++ b/settings.json
@@ -4,7 +4,6 @@
 "mesh filename" : "wire_d70_L1000.msh",
 "final_time" : 1e-6,
 "initial_time_step" : 1e-9,
-"theta" : 0.5,
 "save_energies" : 3,
 "take_photo" : 5,
 "restore" : false,
@@ -15,6 +14,7 @@
 	[1.0,-1.0,0.2,1.0,0.0,0.0],
 	[-1.0,0.0,0.2,1.0,0.0,0.0]	
 	],
+
 "volume_regions" :
 	{
 	"300" : 
@@ -26,6 +26,7 @@
 		"alpha" : 0.05		
 		}
 	},
+
 "surface_regions" :
 	{
 	"200" : 
@@ -34,5 +35,11 @@
 		"Ks" : 0.0,
 		"uk" : [0.0,0.0,1.0]
 		}	
-	}
+	},
+
+"solver" :
+    {
+    "theta" : 0.5,
+    "analytic corrections" : true
+    }
 }
