--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-"output directory" : "",
+"output directory" : "data_out/",
 "output file basename" : "tommy_the_cat",
 "mesh filename" : "wire_d70_L1000.msh",
 "final_time" : 1e-6,
