--- a/settings.json
+++ b/settings.json
@@ -2,6 +2,7 @@
 "output directory" : "data_out/",
 "output file basename" : "tommy_the_cat",
 "mesh filename" : "wire_d70_L1000.msh",
+"scaling factor" : 1e-9,
 "final_time" : 1e-6,
 "save_energies" : 3,
 "take_photo" : 5,
