better handling of NbThreads definitions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,13 +32,13 @@ INCLUDE_DIRECTORIES(${ANN_INCLUDE_DIR} ${MTL_INCLUDE_DIR} ${SCALFMM_INCLUDE_DIR}
 # these parameters are used to build a config.h file 
 #===========================================================================
 
-set(git_cmd "git")
-set(git_arg "show-ref")
-set(git_arg1 "--head")
-set(git_arg2 "HEAD")
-set(git_arg3 "--hash")
+set(my_cmd "git")
+set(my_arg "show-ref")
+set(my_arg1 "--head")
+set(my_arg2 "HEAD")
+set(my_arg3 "--hash")
 
-execute_process(COMMAND ${git_cmd} ${git_arg} ${git_arg1} ${git_arg2} ${git_arg3} RESULT_VARIABLE git_result OUTPUT_VARIABLE git_var)
+execute_process(COMMAND ${my_cmd} ${my_arg} ${my_arg1} ${my_arg2} ${my_arg3} RESULT_VARIABLE git_result OUTPUT_VARIABLE git_var)
 
 string(REPLACE "\n" "" SHAstr "\"${git_var}\"") 
 MESSAGE(STATUS "executable built with SHA1=${SHAstr}")
@@ -46,17 +46,25 @@ MESSAGE(STATUS "executable built with SHA1=${SHAstr}")
 
 set(VERBOSE_MODE true)
 set(SECOND_ORDER true)
-set(NB_THREADS 16)
-MESSAGE(STATUS "NB_THREADS=${NB_THREADS}")
+
+set(SCALFMM_NB_THREADS 16)
+
+MESSAGE(STATUS "SCALFMM_NB_THREADS=${SCALFMM_NB_THREADS}")
+
+set(my_cmd "getconf")
+set(my_arg "_NPROCESSORS_ONLN")
+execute_process(COMMAND ${my_cmd} ${my_arg} RESULT_VARIABLE getnbcpu_result OUTPUT_VARIABLE MAX_NB_THREADS)
+MESSAGE(STATUS "MAX_NB_THREADS=${MAX_NB_THREADS}")
+
 #===========================================================================
 # Compiler options
 #===========================================================================
 
-set( CMAKE_CXX_FLAGS_DEBUG "-Wall -Wextra -std=c++11 -O2 -fopenmp -ffast-math -msse4.2 -mfpmath=sse" CACHE STRING "C++ compiler flags used during debug builds." FORCE )
+set( CMAKE_CXX_FLAGS_DEBUG "-Wall -Wextra -std=c++11 -O2 -ffast-math -msse4.2 -mfpmath=sse" CACHE STRING "C++ compiler flags used during debug builds." FORCE )
 
-set( CMAKE_CXX_FLAGS_RELEASE "-Wall -Wextra -std=c++11 -O3 -fopenmp -ffast-math -msse4.2 -mfpmath=sse" CACHE STRING "C++ compiler flags used during release builds." FORCE )
+set( CMAKE_CXX_FLAGS_RELEASE "-Wall -Wextra -std=c++11 -O3 -ffast-math -msse4.2 -mfpmath=sse" CACHE STRING "C++ compiler flags used during release builds." FORCE )
 
-set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fopenmp")
+#set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fopenmp")
 
 SET( SOURCES config.h pt3D.h matBlocDiag.h tetra.h tetra.cpp facette.h facette.cpp feellgoodSettings.h node.h
 	linear_algebra.h main.cc feellgoodSettings.cpp read.cpp femutil.cc
