Migrate from MTL4 to GMM 5.3
multithread with gmm reveal side effect on scalfmm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ cmake_minimum_required(VERSION 2.8)
 
 set(FEELLGOOD_MAJOR_VERSION 0)
 set(FEELLGOOD_MINOR_VERSION 1)
-set(FEELLGOOD_PATCH_VERSION 0)
+set(FEELLGOOD_PATCH_VERSION 1)
 
 ENABLE_LANGUAGE(CXX)
 
@@ -21,13 +21,13 @@ SET(EXPRTK_INCLUDE_DIR ../exprtk )
 
 SET(ANN_INCLUDE_DIR ../ann_1.1.2/include/ANN )
 
-SET(MTL_INCLUDE_DIR ../mtl4 )
+SET(GMM_INCLUDE_DIR ../gmm-5.3/include)
 
 SET(SCALFMM_INCLUDE_DIR ../SCALFMM-1.4-148/Src )
 
 SET(SCALFMM_CFG /usr/local/include/Utils )
 
-INCLUDE_DIRECTORIES(${ANN_INCLUDE_DIR} ${MTL_INCLUDE_DIR} ${SCALFMM_INCLUDE_DIR} ${SCALFMM_CFG} ${EXPRTK_INCLUDE_DIR} )
+INCLUDE_DIRECTORIES(${ANN_INCLUDE_DIR} ${GMM_INCLUDE_DIR} ${SCALFMM_INCLUDE_DIR} ${SCALFMM_CFG} ${EXPRTK_INCLUDE_DIR} )
 
 #===========================================================================
 # these parameters are used to build a config.h file 
@@ -51,7 +51,7 @@ MESSAGE(STATUS "executable built with SHA1=${SHAstr}")
 set(VERBOSE_MODE true)
 set(SECOND_ORDER true)
 
-set(SCALFMM_NB_THREADS 16)
+set(SCALFMM_NB_THREADS 8)
 
 MESSAGE(STATUS "SCALFMM_NB_THREADS=${SCALFMM_NB_THREADS}")
 
@@ -64,11 +64,11 @@ MESSAGE(STATUS "MAX_NB_THREADS=${MAX_NB_THREADS}")
 # Compiler options
 #===========================================================================
 
-set( CMAKE_CXX_FLAGS_DEBUG "-Wall -Wextra -std=c++11 -O2 -ffast-math -msse4.2 -mfpmath=sse" CACHE STRING "C++ compiler flags used during debug builds." FORCE )
+set( CMAKE_CXX_FLAGS_DEBUG "-Wall -Wextra -std=c++11 -fopenmp -O2 -ffast-math -msse4.2 -mfpmath=sse" CACHE STRING "C++ compiler flags used during debug builds." FORCE )
 
-set( CMAKE_CXX_FLAGS_RELEASE "-Wall -Wextra -std=c++11 -O3 -ffast-math -msse4.2 -mfpmath=sse" CACHE STRING "C++ compiler flags used during release builds." FORCE )
+set( CMAKE_CXX_FLAGS_RELEASE "-Wall -Wextra -std=c++11 -fopenmp -O3 -ffast-math -msse4.2 -mfpmath=sse" CACHE STRING "C++ compiler flags used during release builds." FORCE )
 
-#set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fopenmp")
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fopenmp")
 
 SET( SOURCES config.h pt3D.h matBlocDiag.h tetra.h tetra.cpp facette.h facette.cpp feellgoodSettings.h node.h
 	linear_algebra.h main.cc feellgoodSettings.cpp read.cpp femutil.cc
