--- a/settings.json
+++ b/settings.json
@@ -7,7 +7,7 @@
 "final_time" : 1e-6,
 "save_energies" : 3,
 "take_photo" : 5,
-"restore" : true,
+"restore" : false,
 "restore from file" : "sol.in",
 "initial magnetization" :
     {
