improved LinAlgebra constructor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,9 +62,9 @@ MESSAGE(STATUS "MAX_NB_THREADS=${MAX_NB_THREADS}")
 # Compiler options
 #===========================================================================
 
-set( CMAKE_CXX_FLAGS_DEBUG "-Wall -Wextra -std=c++11 -fopenmp -O2 -ffast-math -msse4.2 -mfpmath=sse" CACHE STRING "C++ compiler flags used during debug builds." FORCE )
+set( CMAKE_CXX_FLAGS_DEBUG "-DNDEBUG -Wall -Wextra -std=c++11 -fopenmp -O2 -ffast-math -msse4.2 -mfpmath=sse" CACHE STRING "C++ compiler flags used during debug builds." FORCE )
 
-set( CMAKE_CXX_FLAGS_RELEASE "-Wall -Wextra -std=c++11 -fopenmp -O3 -ffast-math -msse4.2 -mfpmath=sse" CACHE STRING "C++ compiler flags used during release builds." FORCE )
+set( CMAKE_CXX_FLAGS_RELEASE "-DNDEBUG -Wall -Wextra -std=c++11 -fopenmp -O3 -ffast-math -msse4.2 -mfpmath=sse" CACHE STRING "C++ compiler flags used during release builds." FORCE )
 
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fopenmp")
 
