no more field sequence in json settings

--- a/settings.json
+++ b/settings.json
@@ -19,12 +19,7 @@
     },
 
 "recentering" : true,
-"field_sequence" :
-	[
-	[0.0,1.0,0.2,1.0,0.0,0.0],
-	[1.0,-1.0,0.2,1.0,0.0,0.0],
-	[-1.0,0.0,0.2,1.0,0.0,0.0]	
-	],
+"Bext" : [0.0, 0.0, 0.005],
 
 "volume_regions" :
 	{
